<resources>
    <string name="app_name">PSC119</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_intro_skip">Skip</string>
    <string name="menu_home">Home</string>
    <string name="menu_report">Riwayat Laporan</string>
    <string name="menu_account">Pengaturan Akun</string>
    <string name="menu_about">Tentang Aplikasi</string>
    <string name="menu_feedback">Kritik &amp; Saran</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
