<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_library_books"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_telepon"
            android:icon="@drawable/ac_telepon"
            android:title="Telepon" />
        <item
            android:id="@+id/nav_wa"
            android:icon="@drawable/ac_whatsapp"
            android:title="Whatsapp" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_forum"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_live_help"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/menu_logout" />
    </group>

</menu>
